--- a/src/less/results.less
+++ b/src/less/results.less
@@ -55,7 +55,7 @@
     background-color: #cfe7b3;
     padding: 5px;
     font-weight: bold;
-    font-size: 110%;
+    font-size: @gm-text-header;
     clear: both;
   }
 
@@ -64,7 +64,7 @@
     display: none;
 
     font-style: italic;
-    font-size: 10px;
+    font-size: @gm-text-fine;
     padding: 4px;
     padding-top: 2px;
     padding-bottom: 2px;
@@ -91,7 +91,7 @@
 
       .label {
         width: 100%;
-        font-size: 0.75em;
+        font-size: @gm-text-fine;
         text-overflow: ellipsis;
         white-space: nowrap;
       }
@@ -139,7 +139,7 @@
 
     .results-info-item.filtered-features {
       font-style: italic;
-      font-size: 0.9em;
+      font-size: @gm-text-secondary;
       margin-top: 5px;
     }
   }
