--- a/src/less/toolbar.less
+++ b/src/less/toolbar.less
@@ -4,14 +4,14 @@
 
   .tool {
     box-sizing: border-box;
-    height: 22px;
-    padding: 2px 7px;
-    font-size: 14px;
+    height: 1.6em;
+    padding: 0.15em 0.5em;
+    font-size: @gm-text-secondary;
     border: none;
     background: none;
-    border-radius: 11px;
-    margin-bottom: 4px;
-    margin-right: 4px;
+    border-radius: 0.8em;
+    margin-bottom: 0.25em;
+    margin-right: 0.25em;
 
     color: inherit;
     text-decoration: none;
